# Game-of-Life---C-

./: .gitignore  CMakeLists.txt  Cell.cpp  Cell.h  DayNight.cpp  DayNight.h  DerivationStrategy.cpp  DerivationStrategy.h  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  GoL  GraphicsManager.cpp  GraphicsManager.h  GridSizeSelector.cpp  GridSizeSelector.h  HighLife.cpp  HighLife.h  InputHandler.cpp  InputHandler.h  Maze.cpp  Maze.h  Menu.cpp  Menu.h  OriginalStrategy.cpp  OriginalStrategy.h  Replicator.cpp  Replicator.h  State.cpp  State.h  StateManager.cpp  StateManager.h  StrategyList.cpp  StrategyList.h  main.cpp
Assets/GridSelector/: playButton.ase
Assets/Menu/: bg.ase  bg_anim.ase
